# BB-model

./: .gitignore  CMakeLists.txt  README.md
include/: Generator.hpp  Network.hpp  NetworkComponents.hpp
src/: Generator.cpp  Network.cpp  NetworkComponents.cpp  bbModelCapi.cpp  main.cpp  test.cpp
